compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__type_construct_provided_unknown_field.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/type_construct_provided_unknown_field.test
input_file: compiler/eight-tests/tests/ui/type/type_construct_provided_unknown_field.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::unknown_field

  × the type BrandedBool does not have a field named unknown
   ╭─[tests/ui/type/type_construct_provided_unknown_field.test:8:5]
 7 │     brand: v,
 8 │     unknown: 123,
   ·     ───┬───
   ·        ╰── this field does not exist
 9 │   };
   ╰────
